# hearth-cellar

./: .gitignore  CLAUDE.md  LICENSE  README.md  rebuild.ps1
app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  remarkable.rs
audit/: AGENT_BOOT.md  ASSUMPTIONS.md  ASSURANCE.md  AUDIT_LEDGER.md  DECISIONS.md  EXCEPTIONS.md  FINDINGS.md  METRICS.md  RECON_SUMMARY.md  TIMELINE.md  TRACE_MATRIX.md
zdp-omega/: 00_MASTER_PROTOCOL.md  AGENT_BOOT.md  APPENDIX_RIVAL_AND_PRINCIPAL_DOCTRINE.md  APPENDIX_SEVERITY_AND_DEFECTS.md  APPENDIX_STANDARDS_REGISTER.md  APPENDIX_TEMPLATES.md  APPENDIX_VIBE_CODING_PLAYBOOK.md  PHASE_00_GENESIS_LEDGER_INIT.md  PHASE_01_RECON_AND_BOUNDARY.md  PHASE_02_REQUIREMENTS_AND_TRACEABILITY.md  PHASE_03_ARCHITECTURE_INTEGRITY.md  PHASE_04_CONTRACTS_AND_BOUNDARY_TYPING.md  PHASE_05_CONTROL_FLOW_AND_STATE.md  PHASE_06_DATA_INTEGRITY_AND_PERSISTENCE.md  PHASE_07_CONCURRENCY_AND_DISTRIBUTION.md  PHASE_08_RESOURCES_AND_LIFECYCLE.md  PHASE_09_RESILIENCE_AND_FAILURE.md  PHASE_10_SECURITY_DEEP_AUDIT.md  PHASE_11_PRIVACY_AND_DATA_PROTECTION.md  PHASE_12_SUPPLY_CHAIN_AND_BUILD.md  PHASE_13_FRONTEND_LAYOUT_AND_VISUAL.md  PHASE_14_ACCESSIBILITY.md  PHASE_15_FRONTEND_PERFORMANCE.md  PHASE_16_BACKEND_PERFORMANCE.md  PHASE_17_OBSERVABILITY_AND_OPS.md  PHASE_18_API_AND_INTERFACE_CONTRACTS.md  PHASE_19_TEST_SUITE_FORENSICS.md  PHASE_22_REMEDIATION.md  (+6 more)
(+48 files in other folders)
